# FNO-study

./: .gitignore  README.md  README_SYNC_CHECKLIST.md  README_ja.md  WORKFLOW.md  analyze_feature_importance.py  analyze_training_curves.py  batch_infer_fno.py  build_fno_features.py  build_fno_target_from_avs_ucd.py  build_fno_target_from_surface_points.py  build_fno_training_dataset.py  checkpoint_manager.py  compare_predictions.py  eval_baseline.py  generate_copper_density_map.py  hp_search.py  infer_fno.py  pyproject.toml  requirements-dev.txt  requirements.txt  tensor_chw_guide.md  train_fno.py
configs/: burgers.yaml  navier_stokes.yaml
examples/: fno_input_case_example.yaml  fno_surface_points_example.csv  fno_surface_target_example.json  fno_training_manifest_example.json  frontistr_ucd_example.txt
fno/: __init__.py  data.py  layers.py  model.py  train.py
scripts/: train.py
tests/: test_data.py  test_layers.py  test_model.py  test_train.py  test_train_script.py
