[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fno-study"
version = "0.1.0"
description = "Fourier Neural Operator for predicting large-scale PDE solutions"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fno*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
